fixed the spacing of the Places

--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -1,6 +1,7 @@
 .places h1 {
     font-size: 30px;
     margin: 4px;
+    margin-top: 20px;
     padding: 4px;
 }
 article h2 {
